Bug 579390: Compatibility with latest Eclipse
Change-Id: I64fe58d1d3fb60741b03d8e2730c4718cf618b8d
Signed-off-by: Vasili Gulevich <vasili.gulevich@xored.com>