@@ -123,7 +123,6 @@ public class UpdateVMArgs {
 	public static List<String> updateAttr(List<String> attribute) {
 		List<String> result = Lists.newArrayList(attribute);
 		addIfAbsent(result, "-Xmx", "512m");
-		addIfAbsent(result, "-XX:MaxPermSize", "=128m");
 		// -XstartOnFirstThread
 		// -Dorg.eclipse.swt.internal.carbon.smallFonts
 		if (Platform.getOS().equals(Platform.OS_MACOSX)) {
